--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm  ./node_modules/typeorm/cli -d typeorm.config.ts"
+    "typeorm": "ts-node ./node_modules/typeorm/cli -d typeorm.config.ts",
+    "migration:generate": "typeorm migration:generate src/migrations/$npm_config_name -d dist/typeorm.config"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -55,7 +56,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   },
